--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "rcrowe/twigbridge": "^0.9.4"
+        "rcrowe/twigbridge": "^0.9.4",
+        "artesaos/defender": "dev-master@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
